--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div id="labels"></div>
       </div>
+      <div class="logo-container"></div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
